gerderland export:  code improvements